src/stages/snapshots/lumina2__stages__parse__test__expr__expr_int_lit.snap
---
source: src/stages/parse.rs
expression: "123"
---
Literal(
    Integer(
        IntegerLiteral(
            IntLit(
                123,
            ),
        ),
    ),
)
