src/stages/snapshots/lumina2__stages__parse__test__expr__expr_logical_and.snap
---
source: src/stages/parse.rs
expression: true && something
---
Binary(
    Binary {
        lhs: Literal(
            Boolean(
                True(
                    True,
                ),
            ),
        ),
        op: LogicalAnd(
            AmpAmp,
        ),
        rhs: Variable(
            Variable {
                variable: Ident(
                    "something",
                ),
            },
        ),
    },
)
