src/stages/snapshots/lumina2__stages__parse__test__expr__if_if_else_if_else_if_else.snap
---
source: src/stages/parse.rs
expression: "if condition { something } else if other { something_else } else if another { thing } else { final }"
---
If {
    tok_if: If,
    condition: Variable(
        Variable {
            variable: Ident(
                "condition",
            ),
        },
    ),
    then: Block {
        tok_l_brace: LBrace,
        statements: [
            Expr(
                ExprStatement {
                    expr: Variable(
                        Variable {
                            variable: Ident(
                                "something",
                            ),
                        },
                    ),
                    tok_semicolon: None,
                },
            ),
        ],
        tok_r_brace: RBrace,
    },
    trailer: Some(
        IfTrailer {
            tok_else: Else,
            if_or_block: If(
                If {
                    tok_if: If,
                    condition: Variable(
                        Variable {
                            variable: Ident(
                                "other",
                            ),
                        },
                    ),
                    then: Block {
                        tok_l_brace: LBrace,
                        statements: [
                            Expr(
                                ExprStatement {
                                    expr: Variable(
                                        Variable {
                                            variable: Ident(
                                                "something_else",
                                            ),
                                        },
                                    ),
                                    tok_semicolon: None,
                                },
                            ),
                        ],
                        tok_r_brace: RBrace,
                    },
                    trailer: Some(
                        IfTrailer {
                            tok_else: Else,
                            if_or_block: If(
                                If {
                                    tok_if: If,
                                    condition: Variable(
                                        Variable {
                                            variable: Ident(
                                                "another",
                                            ),
                                        },
                                    ),
                                    then: Block {
                                        tok_l_brace: LBrace,
                                        statements: [
                                            Expr(
                                                ExprStatement {
                                                    expr: Variable(
                                                        Variable {
                                                            variable: Ident(
                                                                "thing",
                                                            ),
                                                        },
                                                    ),
                                                    tok_semicolon: None,
                                                },
                                            ),
                                        ],
                                        tok_r_brace: RBrace,
                                    },
                                    trailer: Some(
                                        IfTrailer {
                                            tok_else: Else,
                                            if_or_block: Block(
                                                Block {
                                                    tok_l_brace: LBrace,
                                                    statements: [
                                                        Expr(
                                                            ExprStatement {
                                                                expr: Variable(
                                                                    Variable {
                                                                        variable: Ident(
                                                                            "final",
                                                                        ),
                                                                    },
                                                                ),
                                                                tok_semicolon: None,
                                                            },
                                                        ),
                                                    ],
                                                    tok_r_brace: RBrace,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
}
