src/stages/snapshots/lumina2__stages__parse__test__expr__literal_false.snap
---
source: src/stages/parse.rs
expression: "false"
---
Boolean(
    False(
        False,
    ),
)
