src/stages/snapshots/lumina2__stages__parse__test__expr__literal_int_0.snap
---
source: src/stages/parse.rs
expression: "0"
---
Integer(
    IntegerLiteral(
        IntLit(
            0,
        ),
    ),
)
