src/stages/snapshots/lumina2__stages__parse__test__expr__literal_int_1.snap
---
source: src/stages/parse.rs
expression: "1"
---
Integer(
    IntegerLiteral(
        IntLit(
            1,
        ),
    ),
)
