src/stages/snapshots/lumina2__stages__parse__test__expr__literal_int_123.snap
---
source: src/stages/parse.rs
expression: "123"
---
Integer(
    IntegerLiteral(
        IntLit(
            123,
        ),
    ),
)
